# CCheckerAi

./: '  .gitignore  README.md  engine.py  engine_test.py  main.py
src/: architect.py  build.sh  build_kamiak.sh  build_kamiak.srun  coords.h  creature.c  creature.h  creature.py  engine.py  engine_test.py  game_manager.py  generation_manager.c  generation_manager.h  genome.c  genome.h  main.py  maxmul.cu  neat.c  neat.pyi  neat_testing.py  run.sh  structmanager.h  test.sh  test_kamiak.sh  test_kamiak.srun  testing  testing.c  testing.py  testr.sh  vector.c  vector.h
src/c_testing/: Example.c  Example.cu  Example.pyi  build.sh  coords.h  ctest.c  cudatest.c  maxmul.cu  pyproject.toml  run.sh  run_cuda_test.sh  run_cuda_test_kamiak.srun  run_so_test.sh  setup.py  structmanager.h  test.py  test1.py
src/c_testing/kamiak_testing/: errors.err  result.out  run_python_test.srun  testing.py
src/maturin-testing/: Cargo.toml  build.rs  pyproject.toml  test.py  test.sh
src/maturin-testing/src/: creature.rs  genome.rs  lib.rs
src/neat/: Cargo.toml  build.rs  build.sh  pyproject.toml  test.py  test.sh
src/neat/dep/: feedforward.cu
src/neat/neat/: __init__.py  neat.pyi
src/neat/src/: creature.rs  generation_manager.rs  genome.rs  lib.rs  reproduction.rs
src/pythoncuda/: cudatest.py  run_cuda_so.sh
