[package]
name = "neat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "neat"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
#pyo3 = { version = "0.19.0", features = ["extension-module"] }
rand = "0.8.5"
